--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,13 +2,14 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
     <title>home</title>
 </head>
 <body>
-hello
 <div id="react"></div>
 
-<script src="/MyHomeApp.js"></script>
+<script src="/js/MyHomeApp.js"></script>
 
 
 </body>
