--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,8 +9,7 @@
 </head>
 <body>
 
-build & deploy test 7
-<div id="react"></div>
+<div id="react" class="wrapper"></div>
 
 <script src="/js/MyHomeApp.js"></script>
  
