기존 css 제거, grid와 flex를 이용하여 레이아웃 정의

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,7 +8,7 @@
     <title>home</title>
 </head>
 <body>
-<div id="react"></div>
+<div id="react" class="wrapper"></div>
 
 <script src="/js/MyHomeApp.js"></script>
 
