--- a/src/main/styles/base.scss
+++ b/src/main/styles/base.scss
@@ -13,6 +13,13 @@
         flex: 1;
         background: rgba(39,43,48,0.97);
         vertical-align: middle;
+        padding-top: 10px;
+        a{
+            margin-left: 10px;
+            color: white;
+            font-size: 25px;
+            text-decoration: none;
+        }
     }
     .topBar{
         flex: 4;
@@ -28,6 +35,11 @@
 .sideBar {
     grid-column: 1/2;
     background: rgba(248,249,250,0.84);
+    a{
+        color: #343a40;
+        font-size: 20px;
+        text-decoration: none;
+    }
 }
 
 .viewContainer {
