--- a/src/main/styles/base.scss
+++ b/src/main/styles/base.scss
@@ -9,33 +9,40 @@
 .header {
     grid-column: 1/3;
     display: flex;
-    .titleBar{
+    .titleBar {
         flex: 1;
-        background: rgba(39,43,48,0.97);
-        vertical-align: middle;
-        padding-top: 10px;
-        a{
-            margin-left: 10px;
+        background: rgba(39, 43, 48, 0.97);
+        display: flex;
+        align-items: center;
+        .sideMenuButton {
+            margin-left: 5px;
+            display: none;
+            align-items: center;
+            border-radius: 4px;
+        }
+        a {
+            margin-left: 5px;
             color: white;
             font-size: 25px;
             text-decoration: none;
         }
+
     }
-    .topBar{
+    .topBar {
         flex: 4;
-        background: rgba(52,58,64,1);
-        .sideMenuButton{
+        background: rgba(52, 58, 64, 1);
+        .sideMenuButton {
             float: right;
             display: none;
         }
-
     }
+
 }
 
 .sideBar {
     grid-column: 1/2;
-    background: rgba(248,249,250,0.84);
-    a{
+    background: rgba(248, 249, 250, 0.84);
+    a {
         color: #343a40;
         font-size: 20px;
         text-decoration: none;
@@ -44,7 +51,7 @@
 
 .viewContainer {
     grid-column: 2/3;
-    background: rgba(255,255,255,0.84);
+    background: rgba(255, 255, 255, 0.84);
 }
 
 .footer {
@@ -53,15 +60,16 @@
 
 @media (max-width: 500px) {
     .header{
-        .sideMenuButton{
-            display: block;
+        .titleBar {
+            .sideMenuButton {
+                display: flex;
+            }
         }
     }
-    .sideBar{
-        display: none;
+    .sideBar {
         grid-column: 1/3;
     }
-    .viewContainer{
+    .viewContainer {
         grid-column: 1/3;
     }
 }
