--- a/src/main/styles/base.scss
+++ b/src/main/styles/base.scss
@@ -42,6 +42,7 @@
 .sideBar {
     grid-column: 1/2;
     background: rgba(248, 249, 250, 0.84);
+    border-right: solid 1px rgba(50, 50, 50, 0.18);
     a {
         color: #343a40;
         font-size: 20px;
@@ -51,15 +52,24 @@
 
 .viewContainer {
     grid-column: 2/3;
+    margin-left: 15px;
     background: rgba(255, 255, 255, 0.84);
 }
 
 .footer {
     grid-column: 1/3;
+    display: flex;
+    justify-content: center;
+    color: #343a40;
+    font-size: 9px;
+    text-align: center;
+    p {
+        line-height: 3px;
+    }
 }
 
 @media (max-width: 500px) {
-    .header{
+    .header {
         .titleBar {
             .sideMenuButton {
                 display: flex;
