admin, public 으로 react app 분리 및 webpack 설정

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -14,14 +14,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta property="og:image" content="http://myks790.tplinkdns.com/images/A.png">
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
     <title>home</title>
+    <link rel="stylesheet" type="text/css" href="/public/MyHomeApp.css">
 </head>
 <body>
 
 <div id="react" class="wrapper"></div>
 
-<script src="/js/MyHomeApp.js"></script>
+<script src="/public/MyHomeApp.js"></script>
  
 
 <script>
