web.ignoring에 / 와 /image/** 추가

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,11 +12,11 @@
             <legend>Login</legend>
             <p>
                 <label for="id">아이디</label>
-                <input id="id" type="text" name="id" value="hun"/>
+                <input id="id" type="text" name="id"/>
             </p>
             <p>
                 <label for="password">암 호</label>
-                <input id="password" type="password" name="password" value="0557"/>
+                <input id="password" type="password" name="password"/>
             </p>
             <p>
                 <input id="login" type="submit" value="로그인"/>
